[package]
name = "memdb"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustasync/memdb"
documentation = "https://docs.rs/memdb"
description = "Thread-safe in-memory key-value store"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
dashmap = "4.0.2"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
